# understudy

./: .hgignore  AddFeedDialog.h  AddFeedDialog.m  COPYING.LESSER  FeedMenuController.h  FeedMenuController.m  HuluAddDialog.h  HuluAsset.h  HuluController.h  HuluController.m  HuluDesktop-Info.plist  HuluFeedController.m  Info.plist  MainMenuController.h  MainMenuController.m  Makefile.am  ManageFeedsDialog.h  ManageFeedsDialog.m  NEWS  NetflixAddDialog.h  NetflixAddDialog.m  NetflixAsset.m  NetflixController.h  NetflixController.m  NetflixFeedController.h  NetflixFeedController.m  ProjectHome.md  RenameDialog.m  UNDExternalLauncher-Info.plist  UnderstudyAppliance.h  UnderstudyAppliance.m  VideoAsset.h  VideoAsset.m  VideoController.h  VideoController.m  bootstrap  changelog.md  configure.ac  development.md  install.md  (+2 more)
BBCiPlayer/: UNDNSXMLElement+Parsing.h  UNDNSXMLElement+Parsing.m  UNDiPlayerAddDialog.h  UNDiPlayerAddDialog.m  UNDiPlayerAsset.h  UNDiPlayerAsset.m  UNDiPlayerAssetProvider.h  UNDiPlayerAssetProvider.m  UNDiPlayerController.h  UNDiPlayerController.m  UNDiPlayerFeed.h  UNDiPlayerFeed.m
BRHeaders/: BRAlertController.h  BRAppliance.h  BRApplianceControllerIconProtocol-Protocol.h  BRApplianceProtocol-Protocol.h  BRBaseMediaAsset.h  BRCenteredMenuController.h  BRComboMenuItemLayer.h  BRControl.h  BRController.h  BRControllerStack.h  BRDisplayManager.h  BREvent.h  BREventManager.h  BREventResponder-Protocol.h  BRImage.h  BRImageManager.h  BRImageProvider-Protocol.h  BRLayer.h  BRListControl.h  BRMediaMenuController.h  BRMediaPreviewControllerFactory.h  BRMediaType.h  BRMenuController-HeaderConvienceMethods.h  BRMenuController.h  BRMenuItemLayer-Protocol.h  BRMenuListItemProvider-Protocol.h  BRMenuSavedState-Private.h  BRMenuSavedState.h  BROptionDialog.h  BRPanel.h  BRRenderScene.h  BRRenderer.h  BRSentinel.h  BRSettingsFacade.h  BRSingleton.h  BRTextContainer-Protocol.h  BRTextEntryController.h  BRTextEntryDelegate-Protocol.h  BRTextMenuItemLayer.h  BRTextWithSpinnerController.h  (+6 more)
Base/: BaseController.h  BaseController.m  BaseUnderstudyAsset.h  BaseUnderstudyAsset.m  FeedMenuController.h  FeedMenuController.m  LoadingAsset.h  LoadingAsset.m  UNDAssetCollection.h  UNDAssetCollection.m  UNDAssetFactory.h  UNDAssetFactory.m  UNDBaseAsset.h  UNDBaseCollection.h  UNDBaseCollection.m  UNDBaseController.h  UNDBaseController.m  UNDCollectionAddDialog.h  UNDCollectionProvider.m  UNDExternalAppAddDialog.h  UNDExternalAppAddDialog.m  UNDExternalAppAsset.h  UNDExternalAppAsset.m  UNDExternalAppAssetProvider.h  UNDExternalAppAssetProvider.m  UNDExternalLaunchController.h  UNDExternalLaunchController.m  UNDExternalLauncher.m  UNDLoadingAsset.h  UNDLoadingAsset.m  UNDMenuController.h  UNDMenuController.m  UNDMutableCollection.h  UNDMutableCollection.m  UNDUnknownAsset.h  UNDUnknownAsset.m  UnderstudyAsset.h
DailyShow/: DailyShowAddDialog.h  DailyShowAddDialog.m  DailyShowAsset.h  DailyShowAsset.m  DailyShowController.h  DailyShowController.m  DailyShowFullEpisodesFeed.h  DailyShowFullEpisodesFeed.m  UNDDailyShowAssetProvider.h  UNDDailyShowAssetProvider.m
English.lproj/: InfoPlist.strings
Hulu/: HuluAddDialog.h  HuluFeed.h  (+13 more)
src/: Makefile.am  UNDAppliance.h  UNDAppliance.m
src/BBCiPlayer/: UNDiPlayerAddDialog.h  UNDiPlayerAddDialog.m  UNDiPlayerAsset.h  UNDiPlayerAsset.m  UNDiPlayerAssetProvider.h  UNDiPlayerController.h  UNDiPlayerController.m  UNDiPlayerFeed.h  UNDiPlayerFeed.m
src/BRHeaders/: BRAppliance.h  BRController.h  BRDisplayManager.h  BREvent.h  BREventManager.h  BRImage.h  BRImageManager.h  BRListControl.h  BRMediaAsset-Protocol.h  BRMediaMenuController.h  BRMediaPreviewControllerFactory.h  BRMediaPreviewFactoryDelegate-Protocol.h  BRMediaProvider-Protocol.h  BRMenuController-HeaderConvienceMethods.h  BRMenuController.h  BRMenuSavedState-Private.h  BRRenderer.h  BRType.h  RUISoundHandler.h
src/Base/: UNDAddAssetDialog.h  UNDAddAssetDialog.m  UNDAsset.h  UNDAssetFactory.h  UNDAssetFactory.m  UNDBaseAsset.h  UNDBaseAsset.m  UNDBaseCollection.h  UNDBaseCollection.m  UNDBaseController.h  UNDBaseController.m  UNDCollectionAddDialog.h  UNDCollectionAddDialog.m  UNDCollectionProvider.h  UNDEditDialog.h  UNDEditDialog.m  UNDExternalAppAddDialog.h  UNDExternalAppAddDialog.m  UNDExternalAppAsset.m  UNDExternalAppAssetProvider.m  UNDExternalLaunchController.h  UNDExternalLaunchController.m  UNDLoadingAsset.h  UNDManageDialog.h  UNDManageDialog.m  UNDMenuController.h  UNDMenuController.m  UNDMutableCollection.m  UNDUnknownAsset.h  UNDUnknownAsset.m
src/DailyShow/: DailyShowAsset.m  DailyShowController.h  DailyShowFullEpisodesFeed.h  DailyShowFullEpisodesFeed.m
src/Hulu/: HuluAddDialog.h  HuluAddDialog.m  HuluAsset.h  HuluAsset.m  UNDHuluAssetProvider.h  UNDHuluAssetProvider.m
src/Hulu/Player/: UNDHuluFSSelector.h  UNDHuluFSSelector.m  UNDHuluPlayer.h
src/Menuing/: UNDAddAssetDialog.m  UNDEditDialog.h  UNDEditDialog.m  UNDManageDialog.h  UNDManageDialog.m  UNDPreferenceManager.h  UNDPreferenceManager.m
src/Netflix/: BRImageManager+Netflix.h  BRImageManager+Netflix.m  UNDNetflixAddDialog.h  UNDNetflixAddDialog.m  UNDNetflixAsset.h  UNDNetflixAsset.m  UNDNetflixAssetProvider.h  UNDNetflixController.h  UNDNetflixController.m  UNDNetflixFeed.h  UNDNetflixFeed.m  UNDNetflixLoadingController.h  UNDNetflixLoadingController.m  UNDNetflixSeason.h  UNDNetflixSeason.m  UNDNetflixSeasonCollection.h  UNDNetflixSeasonCollection.m
src/Netflix/Player/: UNDNetflixKeyboardDevice.m  UNDNetflixPlayer.h  UNDNetflixPlayer.m  local.mk  main.m
src/RemoteControlWrapper/: FrontRowKeyboardDevice.m  GlobalKeyboardDevice.m  RemoteControl.h  local.mk
src/Utilities/: UNDFileAsset.h  UNDFileAsset.m  UNDFileBrowser.h  UNDFileBrowser.m  UNDFileCollection.h  UNDFileCollection.m  UNDIconProvider.h  UNDPasswordProvider.m  UNDPluginControl.h  UNDPreferenceManager.h  UNDPreferenceManager.m
src/YouTube/: UNDYouTubeAddDialog.h  UNDYouTubeAddDialog.m  UNDYouTubeAsset.h  UNDYouTubeAsset.m  UNDYouTubeAssetProvider.h  UNDYouTubeController.h  UNDYouTubeController.m  UNDYouTubeFeed.h  UNDYouTubeFeed.m
(+101 files in other folders)
