AC_INIT([Understudy], [0.9+], [kirk.kelsey@0x4b.net])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_SRCDIR([src/UNDAppliance.h])
AC_CONFIG_HEADERS([src/config.h])
AC_LANG(Objective C)
AM_INIT_AUTOMAKE([foreign])

AC_PROG_OBJC
AC_PROG_RANLIB


AC_HEADER_STDBOOL
AC_TYPE_INT64_T
AC_TYPE_UINT32_T

AC_FUNC_MALLOC
AC_CHECK_FUNCS([floor regcomp])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
